--- a/package.json
+++ b/package.json
@@ -3,5 +3,69 @@
     "version": "0.0.1",
     "description": "React Native UI Kit built with the Bitcoin Design Guide",
     "author": "Collin Rukundo <collin@matchstick.ug> (https://github.com/crukundo)",
-    "license": "MIT"
+    "license": "MIT",
+    "keywords": [
+        "bitcoin",
+        "bitcoin design guide",
+        "react-native",
+        "ios",
+        "android"
+    ],
+    "dependencies": {
+        "react": "17.0.2",
+        "react-native": "0.68.2"
+    },
+    "devDependencies": {
+        "@babel/core": "7.20.12",
+        "@babel/runtime": "7.20.7",
+        "@react-native-community/eslint-config": "3.2.0",
+        "@storybook/addon-actions": "6.5.15",
+        "@storybook/addon-knobs": "6.4.0",
+        "@storybook/addon-links": "6.5.15",
+        "@storybook/addon-ondevice-actions": "5.3.23",
+        "@storybook/addon-ondevice-knobs": "5.3.26",
+        "@storybook/channel-websocket": "6.5.15",
+        "@storybook/react-native": "5.3.27",
+        "@storybook/react-native-server": "5.3.23",
+        "@types/jest": "29.2.5",
+        "@types/jest-image-snapshot": "6.1.0",
+        "@types/pixelmatch": "5.2.4",
+        "@types/react-native": "0.67.12",
+        "@types/react-test-renderer": "17.0.2",
+        "@typescript-eslint/eslint-plugin": "5.48.2",
+        "@typescript-eslint/parser": "5.48.2",
+        "babel-jest": "29.3.1",
+        "babel-loader": "9.1.2",
+        "babel-plugin-module-resolver": "4.1.0",
+        "detox": "19.13.0",
+        "eslint": "8.32.0",
+        "jasmine": "4.5.0",
+        "jest": "29.3.1",
+        "jest-circus": "29.3.1",
+        "jest-image-snapshot": "6.1.0",
+        "metro-react-native-babel-preset": "0.74.0",
+        "pixelmatch": "5.3.0",
+        "pngjs": "6.0.0",
+        "react-dom": "18.2.0",
+        "react-test-renderer": "17.0.2",
+        "ts-jest": "29.0.5",
+        "typescript": "4.9.4",
+        "ws": "8.12.0"
+    },
+    "resolutions": {
+        "@types/react": "^17"
+    },
+    "jest": {
+        "preset": "react-native",
+        "testRegex": "\\.spec.(ts|tsx)$",
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js",
+            "jsx",
+            "json",
+            "node"
+        ]
+    }
+
 }
