--- a/.yarnrc
+++ b/.yarnrc
@@ -1,3 +1,3 @@
-# Override Yarn command so we can automatically setup the repo on running `yarn`
+# Override Yarn command for consistency
 
 yarn-path "scripts/bootstrap.js"
