--- a/package.json
+++ b/package.json
@@ -1,75 +1,104 @@
 {
-    "name": "etta-ui",
-    "version": "0.0.1",
-    "description": "React Native UI Kit built with the Bitcoin Design Guide",
-    "author": "Collin Rukundo <collin@matchstick.ug> (https://github.com/crukundo)",
-    "license": "MIT",
-    "keywords": [
-        "bitcoin",
-        "bitcoin design guide",
-        "react-native",
-        "ios",
-        "android"
-    ],
-    "dependencies": {
-        "react": "*",
-        "react-native": "*"
-    },
-    "devDependencies": {
-        "@commitlint/config-conventional": "17.4.2",
-        "@react-native-community/eslint-config": "3.2.0",
-        "@types/jest": "29.2.5",
-        "@types/react": "17.0.52",
-        "@types/react-native": "0.67.12",
-        "@types/react-test-renderer": "17.0.2",
-        "@types/ws": "8.5.4",
-        "@typescript-eslint/eslint-plugin": "5.48.2",
-        "@typescript-eslint/parser": "5.48.2",
-        "babel-jest": "29.3.1",
-        "commitlint": "17.4.2",
-        "eslint": "8.32.0",
-        "eslint-config-prettier": "8.6.0",
-        "eslint-plugin-jest": "27.2.1",
-        "eslint-plugin-prettier": "4.2.1",
-        "husky": "8.0.3",
-        "jest": "29.3.1",
-        "metro-react-native-babel-preset": "0.74.0",
-        "pod-install": "0.1.38",
-        "prettier": "2.8.3",
-        "react": "17.0.2",
-        "react-native": "0.68.2",
-        "react-native-builder-bob": "0.19.0",
-        "typescript": "4.9.4",
-        "ws": "8.12.0"
-    },
-    "jest": {
-        "preset": "react-native",
-        "testRegex": "\\.spec.(ts|tsx)$",
-        "modulePathIgnorePatterns": [
-            "<rootDir>/lib/"
-        ]
-    },
-    "commitlint": {
-        "extends": [
-            "@commitlint/config-conventional"
-        ]
-    },
-    "eslintIgnore": [
-        "node_modules/",
-        "lib/"
-    ],
-    "react-native-builder-bob": {
-        "source": "src",
-        "output": "lib",
-        "targets": [
-            "commonjs",
-            "module",
-            [
-                "typescript",
-                {
-                    "project": "tsconfig.build.json"
-                }
-            ]
-        ]
-    }
+  "name": "etta-ui",
+  "version": "0.0.1",
+  "description": "React Native UI Kit built with the Bitcoin Design Guide",
+  "author": "Collin Rukundo <collin@matchstick.ug> (https://github.com/crukundo)",
+  "license": "MIT",
+  "keywords": [
+    "bitcoin",
+    "bitcoin design guide",
+    "react-native",
+    "ios",
+    "android"
+  ],
+  "source": "src/index",
+  "files": [
+    "src",
+    "lib",
+    "android",
+    "fonts",
+    "ios",
+    "cpp",
+    "react-native.config.js",
+    "react-native-nucleus-ui.podspec",
+    "!lib/typescript/showcase",
+    "!android/build",
+    "!ios/build",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__"
+  ],
+  "scripts": {
+    "test": "jest",
+    "start": "tsc --watch",
+    "typescript": "tsc --noEmit",
+    "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "prepare": "bob build",
+    "release": "release-it",
+    "example": "yarn --cwd showcase",
+    "pods": "cd showcase && pod-install --quiet",
+    "bootstrap": "yarn showcase && yarn && yarn pods"
+  },
+  "dependencies": {
+    "react": "*",
+    "react-native": "*"
+  },
+  "devDependencies": {
+    "@commitlint/config-conventional": "17.4.2",
+    "@react-native-community/eslint-config": "3.2.0",
+    "@types/jest": "29.2.5",
+    "@types/react": "17.0.52",
+    "@types/react-native": "0.67.12",
+    "@types/react-test-renderer": "17.0.2",
+    "@types/ws": "8.5.4",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
+    "babel-jest": "29.3.1",
+    "commitlint": "17.4.2",
+    "eslint": "8.32.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-jest": "27.2.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "husky": "8.0.3",
+    "jest": "29.3.1",
+    "metro-react-native-babel-preset": "0.74.0",
+    "pod-install": "0.1.38",
+    "prettier": "2.8.3",
+    "react": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-builder-bob": "0.19.0",
+    "typescript": "4.9.4",
+    "ws": "8.12.0"
+  },
+  "jest": {
+    "preset": "react-native",
+    "testRegex": "\\.spec.(ts|tsx)$",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/showcase/node_modules",
+      "<rootDir>/lib/"
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "eslintIgnore": [
+    "node_modules/",
+    "lib/"
+  ],
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module",
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json"
+        }
+      ]
+    ]
+  }
 }
