--- a/example/package.json
+++ b/example/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "dev": "npx expo start --dev-client",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -11,24 +12,27 @@
     "prestart": "yarn update-stories",
     "storybook-watcher": "sb-rn-watcher --config-path .ondevice",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "eas-android": "eas build --profile development --platform android"
   },
   "dependencies": {
-    "react-native-safe-area-context": "4.4.1",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
     "expo": "^47.0.0",
-    "expo-status-bar": "~1.4.2",
+    "expo-community-flipper": "^47.0.0",
+    "expo-dev-client": "~2.0.1",
     "expo-font": "^11.0.1",
+    "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-flipper": "^0.177.0",
+    "react-native-safe-area-context": "4.4.1",
     "react-native-web": "^0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "babel-plugin-module-resolver": "^4.1.0",
     "@expo/webpack-config": "^0.17.2",
     "@storybook/addon-actions": "^6.5.14",
     "@storybook/addon-controls": "^6.5.14",
@@ -41,10 +45,11 @@
     "@storybook/addon-react-native-web": "^0.0.19",
     "@storybook/react": "^6.5.14",
     "@storybook/react-native": "next",
-    "babel-plugin-react-docgen-typescript": "^1.5.1",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "babel-loader": "^8.2.3",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-react-docgen-typescript": "^1.5.1",
     "babel-plugin-react-native-web": "^0.18.10",
     "typescript": "^4.6.3"
   },
