--- a/example/package.json
+++ b/example/package.json
@@ -35,6 +35,7 @@
     "@babel/core": "^7.12.9",
     "@expo/webpack-config": "^0.17.2",
     "@storybook/addon-actions": "^6.5.14",
+    "@storybook/addon-docs": "^6.5.14",
     "@storybook/addon-controls": "^6.5.14",
     "@storybook/addon-essentials": "^6.5.14",
     "@storybook/addon-links": "^6.5.14",
