feat: added switch component & story

--- a/example/package.json
+++ b/example/package.json
@@ -36,6 +36,7 @@
     "@expo/webpack-config": "^0.17.2",
     "@storybook/addon-actions": "^6.5.14",
     "@storybook/addon-docs": "^6.5.14",
+    "@storybook/addon-knobs": "^6.4.0",
     "@storybook/addon-controls": "^6.5.14",
     "@storybook/addon-essentials": "^6.5.14",
     "@storybook/addon-links": "^6.5.14",
@@ -46,6 +47,7 @@
     "@storybook/addon-react-native-web": "^0.0.19",
     "@storybook/react": "^6.5.14",
     "@storybook/react-native": "next",
+    "@storybook/theming": "^6.5.14",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "babel-loader": "^8.2.3",
