feat: added keypad component and story

--- a/example/package.json
+++ b/example/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-flipper": "^0.177.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-web": "^0.18.10"
   },
@@ -35,10 +36,10 @@
     "@babel/core": "^7.12.9",
     "@expo/webpack-config": "^0.17.2",
     "@storybook/addon-actions": "^6.5.14",
-    "@storybook/addon-docs": "^6.5.14",
-    "@storybook/addon-knobs": "^6.4.0",
     "@storybook/addon-controls": "^6.5.14",
+    "@storybook/addon-docs": "^6.5.14",
     "@storybook/addon-essentials": "^6.5.14",
+    "@storybook/addon-knobs": "^6.4.0",
     "@storybook/addon-links": "^6.5.14",
     "@storybook/addon-ondevice-actions": "next",
     "@storybook/addon-ondevice-backgrounds": "next",
