--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-builder-bob": "^0.20.0",
-    "react-native-platform-touchable": "^1.1.1",
     "release-it": "^15.0.0",
     "typescript": "^4.5.2"
   },
@@ -162,6 +161,6 @@
   },
   "dependencies": {
     "react-native-gesture-handler": "^2.9.0",
-    "react-native-platform-touchable": "^1.1.1"
+    "react-native-svg": "^13.7.0"
   }
 }
