--- a/example/package.json
+++ b/example/package.json
@@ -1,12 +1,11 @@
 {
   "name": "example",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "dev": "npx expo start --dev-client",
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "update-stories": "sb-rn-get-stories --config-path .ondevice",
     "prestart": "yarn update-stories",
@@ -19,7 +18,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
-    "expo": "^47.0.0",
+    "expo": "~47.0.12",
     "expo-community-flipper": "^47.0.0",
     "expo-dev-client": "~2.0.1",
     "expo-font": "^11.0.1",
@@ -31,7 +30,8 @@
     "react-native-flipper": "^0.177.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-web": "^0.18.10"
+    "react-native-web": "^0.18.10",
+    "expo-splash-screen": "~0.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
