feat: add mnemonic container component and story

--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     ]
   },
   "dependencies": {
+    "@react-native-community/clipboard": "git+https://github.com/crukundo/react-native-clipboard#5afb848",
     "react-native-gesture-handler": "^2.9.0"
   }
 }
