--- a/example/package.json
+++ b/example/package.json
@@ -23,15 +23,14 @@
     "expo-dev-client": "~2.0.1",
     "expo-font": "^11.0.1",
     "expo-haptics": "~12.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-flipper": "^0.177.0",
-    "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-web": "^0.18.10",
-    "expo-splash-screen": "~0.17.5"
+    "react-native-web": "^0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
