--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@react-native-community/eslint-config": "^3.0.2",
     "@release-it/conventional-changelog": "^5.0.0",
     "@types/jest": "^28.1.2",
+    "@types/lodash": "^4.14.191",
     "@types/react": "~17.0.21",
     "@types/react-native": "0.70.0",
     "@types/react-native-platform-touchable": "^1.1.2",
@@ -161,7 +162,9 @@
   },
   "dependencies": {
     "@react-native-community/clipboard": "git+https://github.com/crukundo/react-native-clipboard#5afb848",
+    "lodash": "^4.17.21",
     "react-native-big-list": "^1.6.0",
-    "react-native-gesture-handler": "^2.9.0"
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-safe-area-context": "^4.5.0"
   }
 }
