--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "@types/lodash": "^4.14.191",
     "@types/react": "~17.0.21",
     "@types/react-native": "0.70.0",
-    "@types/react-native-platform-touchable": "^1.1.2",
     "commitlint": "^17.0.2",
     "del-cli": "^5.0.0",
     "eslint": "^8.4.1",
@@ -165,6 +164,7 @@
     "lodash": "^4.17.21",
     "react-native-big-list": "^1.6.0",
     "react-native-gesture-handler": "^2.9.0",
-    "react-native-safe-area-context": "^4.5.0"
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-svg": "^13.8.0"
   }
 }
