--- a/example/package.json
+++ b/example/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-flipper": "^0.177.0",
+    "react-native-safe-area-context": "4.4.1",
     "react-native-svg": "13.6.0",
     "react-native-web": "~0.18.7"
   },
